--- a/Lab1/Resources/merged-styles.css
+++ b/Lab1/Resources/merged-styles.css
@@ -1,4 +1,328 @@
-.main,
+.solo-portfolio-template * {
+  box-sizing: border-box;
+}
+
+.solo-portfolio-template {
+  background: #060f14;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  min-width: 1920px;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+.picture-stack {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  height: 1080px;
+  position: relative;
+  overflow: hidden;
+}
+
+.header {
+  background: rgba(0, 0, 0, 0.01);
+  padding: 0px 40px 0px 40px;
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  align-items: center;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  backdrop-filter: blur(50px);
+}
+
+.wv-monogram {
+  color: #dcb700;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 80px;
+  letter-spacing: -0.2em;
+  font-weight: 700;
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+
+.previous-works {
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.separating-div {
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.members {
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.member-1 {
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.member-2 {
+  color: #cdd3bd;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.member-3 {
+  color: #d2ca7e;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.member-4 {
+  color: #d7c13f;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.member-5 {
+  color: #dcb700;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 25px;
+  font-weight: 700;
+  position: relative;
+}
+
+.hero {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.member-number {
+  padding: 10px 50px 10px 25px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: center;
+  justify-content: flex-end;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.weather-vanes-title {
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 80px;
+  font-weight: 700;
+  position: relative;
+}
+
+.headshot-and-name {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: center;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+}
+
+.weather-vanes-title2 {
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 80px;
+  font-weight: 700;
+  position: relative;
+}
+
+.previous-works2, .portfolio-information {
+  padding: 100px 50px 50px 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  align-items: center;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: #dcb700;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 60px;
+  font-weight: 700;
+  position: relative;
+}
+
+.contact-info {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.text {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex: 1;
+  position: relative;
+  overflow: hidden;
+}
+
+.title {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: #dcb700;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 40px;
+  font-weight: 700;
+  position: relative;
+}
+
+.description {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  align-items: flex-start;
+  justify-content: flex-start;
+  align-self: stretch;
+  flex-shrink: 0;
+  overflow: hidden;
+  color: #c7dcfc;
+  text-align: left;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 30px;
+  font-weight: 700;
+  position: relative;
+}
+
+.introduction-statement {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: #c7dcfc;
+  text-align: center;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 40px;
+  font-weight: 700;
+  position: relative;
+  align-self: stretch;
+}
+
+
+.work-exp-details {
+  padding: 10px 25px 10px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: #c7dcfc;
+  text-align: justified;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.skills2 {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 0px;
+  align-items: center;
+  justify-content: center;
+  align-self: stretch;
+  flex-shrink: 0;
+  position: relative;
+  overflow: hidden;
+  color: #c7dcfc;
+  text-align: justified;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 30px;
+  font-weight: 700;
+  position: relative;
+  align-self: stretch;
+}
+
 .main * {
   box-sizing: border-box;
 }
@@ -17,118 +341,7 @@ body {
   position: relative;
   overflow: hidden;
 }
-.picture-stack {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  height: 1080px;
-  position: relative;
-  overflow: hidden;
-}
-.header {
-  background: rgba(0, 0, 0, 0.01);
-  padding: 0px 40px 0px 40px;
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  align-items: center;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-  backdrop-filter: blur(50px);
-}
-.wv-monogram {
-  color: #dcb700;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 80px;
-  letter-spacing: -0.2em;
-  font-weight: 700;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-start;
-}
-.previous-works {
-  color: #c7dcfc;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.separating-div {
-  align-self: stretch;
-  flex: 1;
-  position: relative;
-  overflow: hidden;
-}
-.members {
-  color: #c7dcfc;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.member-1 {
-  color: #c7dcfc;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.member-2 {
-  color: #cdd3bd;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.member-3 {
-  color: #d2ca7e;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.member-4 {
-  color: #d7c13f;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.member-5 {
-  color: #dcb700;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 25px;
-  font-weight: 700;
-  position: relative;
-}
-.hero {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
-  justify-content: center;
-  align-self: stretch;
-  flex: 1;
-  position: relative;
-  overflow: hidden;
-}
+
 .weather-vanes-logo-svg-1 {
   flex-shrink: 0;
   width: 250px;
@@ -137,6 +350,7 @@ body {
   overflow: hidden;
   aspect-ratio: 1;
 }
+
 .clip-path-group {
   height: auto;
   position: absolute;
@@ -144,14 +358,7 @@ body {
   top: 0px;
   overflow: visible;
 }
-.weather-vanes-title {
-  color: #c7dcfc;
-  text-align: left;
-  font-family: 'Cormorant Garamond', serif;
-  font-size: 80px;
-  font-weight: 700;
-  position: relative;
-}
+
 .team-slogan-subtitle {
   color: #c7dcfc;
   text-align: left;
@@ -160,18 +367,7 @@ body {
   font-weight: 700;
   position: relative;
 }
-.previous-works2 {
-  padding: 100px 50px 50px 50px;
-  display: flex;
-  flex-direction: column;
-  gap: 100px;
-  align-items: center;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
+
 .previous-works3 {
   color: #dcb700;
   text-align: left;
@@ -180,6 +376,7 @@ body {
   font-weight: 700;
   position: relative;
 }
+
 .prev-work-1 {
   display: flex;
   flex-direction: row;
@@ -191,31 +388,7 @@ body {
   position: relative;
   overflow: hidden;
 }
-.text {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 0px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex: 1;
-  position: relative;
-  overflow: hidden;
-}
-.title {
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  height: 68px;
-  position: relative;
-  overflow: hidden;
-}
+
 .weathervanes-website {
   color: #dcb700;
   text-align: left;
@@ -225,18 +398,7 @@ body {
   position: relative;
   flex: 1;
 }
-.description {
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  align-items: flex-start;
-  justify-content: flex-start;
-  align-self: stretch;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
+
 .desc-text {
   color: #c7dcfc;
   text-align: left;
@@ -246,6 +408,7 @@ body {
   position: relative;
   width: 865px;
 }
+
 .image {
   padding: 10px;
   display: flex;
@@ -258,6 +421,7 @@ body {
   position: relative;
   overflow: hidden;
 }
+
 .website-thumbnail {
   flex-shrink: 0;
   width: 885px;
@@ -266,6 +430,7 @@ body {
   object-fit: cover;
   aspect-ratio: 885/499.79;
 }
+
 .prev-work-2 {
   display: flex;
   flex-direction: row;
@@ -277,6 +442,7 @@ body {
   position: relative;
   overflow: hidden;
 }
+
 .title2 {
   padding: 10px;
   display: flex;
@@ -290,6 +456,7 @@ body {
   position: relative;
   overflow: hidden;
 }
+
 .weathervanes-web-app {
   color: #dcb700;
   text-align: left;
@@ -299,6 +466,7 @@ body {
   position: relative;
   flex: 1;
 }
+
 .description2 {
   padding: 10px;
   display: flex;
@@ -323,6 +491,7 @@ body {
   position: relative;
   overflow: hidden;
 }
+
 .project-3 {
   color: #dcb700;
   text-align: left;
@@ -343,7 +512,6 @@ a:hover {
   font-size: 35px;
 }
 
-/* portfolio styling */
 h1 {
   color: #dcb700;
   text-align: left;
@@ -353,3 +521,4 @@ h1 {
   position: relative;
   flex: 1;
 }
+
