Updating my page
Added a class for my high school  (in merged-styles.css) but it might not be necessary, may remove it later

--- a/Lab1/Resources/merged-styles.css
+++ b/Lab1/Resources/merged-styles.css
@@ -640,3 +640,11 @@ h1 {
   flex: 1;
 }
 
+.bths-high-school a,
+.bths-high-school a:visited,
+.bths-high-school a:hover,
+.bths-high-school a:active {
+  color: inherit; 
+  text-decoration:underline;
+}
+
