Working on portfolio, added landing page thumbnails

--- a/Lab1/Resources/merged-styles.css
+++ b/Lab1/Resources/merged-styles.css
@@ -567,7 +567,8 @@ body {
 .rensselaer-polytechnic-institute a,
 .rensselaer-polytechnic-institute a:visited,
 .rensselaer-polytechnic-institute a:hover,
-.rensselaer-polytechnic-institute a:active {
+.rensselaer-polytechnic-institute a:active,
+.secondary-school {
   color: inherit; 
   text-decoration:underline;
 }
