--- a/Lab2/Resources/styles.css
+++ b/Lab2/Resources/styles.css
@@ -9,6 +9,27 @@ body {
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #7e7558;
+    transition: all 150ms ease-in-out;
+}
+
+a:hover {
+    color: rgb(55, 81, 226);
+    text-decoration: underline;
+}
+
+.nav {
+    font-family: 'Garamond', serif;
+    font-size: 26px;
+    text-align: left;
+    color: #7e7558;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
 .main-title {
     font-family: 'Garamond', serif;
     font-size: 32px;
@@ -39,6 +60,44 @@ body {
     border: #060f14 solid 2px;
     float: left;
     clear: left;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.history {
+    color: #060f14;
+    text-align: left;
+    font-family: 'Garamond', serif;
+    font-size: 21px;
+    letter-spacing: 0em;
+    font-weight: 400;
+    line-height: 1.5em;
+    padding: 20px 40px 20px 40px;
+    width: 90%;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    display: block;
+    float: left;
+    clear: left;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.quote {
+    color: #060f14;
+    text-align: center;
+    font-family: 'Garamond', serif;
+    font-size: 30px;
+    letter-spacing: 0em;
+    font-weight: 400;
+    line-height: 1.5em;
+    padding: 80px 40px 80px 40px;
+    width: 90%;
+    margin-left: 20px;
+    margin-bottom: 10px;
+    display: block;
+    float: inherit;
+    clear: both;
     cursor: pointer;
     transition: all 0.3s ease;
 }
